--- a/OrbitalSpace.vcxproj
+++ b/OrbitalSpace.vcxproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="perftimer.cpp" />
-    <ClCompile Include="sdltest.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="simviz.cpp" />
     <ClCompile Include="orbitalSpaceApp.cpp" />
     <ClCompile Include="timer.cpp" />
