--- a/OrbitalSpace.vcxproj
+++ b/OrbitalSpace.vcxproj
@@ -14,11 +14,8 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="geom.h" />
     <ClInclude Include="perftimer.h" />
-    <ClInclude Include="pose.h" />
     <ClInclude Include="rnd.h" />
-    <ClInclude Include="simviz.h" />
     <ClInclude Include="orbitalSpaceApp.h" />
-    <ClInclude Include="sv_particlefilter.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="vector.h" />
@@ -27,7 +24,6 @@
     <ClCompile Include="app.cpp" />
     <ClCompile Include="perftimer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="simviz.cpp" />
     <ClCompile Include="orbitalSpaceApp.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="util.cpp" />
@@ -71,7 +67,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_MBCS;SFML_STATIC;_DEBUG;_USE_MATH_DEFINES;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;SFML_STATIC;NOMINMAX;_DEBUG;_USE_MATH_DEFINES;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\Coding\SFML-2.0-rc\include;D:\Coding\glew-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -94,7 +90,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>_MBCS;SFML_STATIC;NDEBUG;_USE_MATH_DEFINES;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;SFML_STATIC;NOMINMAX;NDEBUG;_USE_MATH_DEFINES;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\Coding\SFML-2.0-rc\include;D:\Coding\glew-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CallingConvention>Cdecl</CallingConvention>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
