--- a/OrbitalSpace.vcxproj
+++ b/OrbitalSpace.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="src\app.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\orbitalSpaceApp.cpp" />
+    <ClCompile Include="src\orPhysics.cpp" />
     <ClCompile Include="src\orPlatform\win32\window_win32.cpp" />
     <ClCompile Include="src\orProfile\perftimer.cpp" />
     <ClCompile Include="src\orRender.cpp" />
@@ -25,10 +26,12 @@
     <ClInclude Include="include\app.h" />
     <ClInclude Include="include\boost_begin.h" />
     <ClInclude Include="include\boost_end.h" />
+    <ClInclude Include="include\constants.h" />
     <ClInclude Include="include\geom.h" />
     <ClInclude Include="include\orbitalSpaceApp.h" />
     <ClInclude Include="include\orGfx.h" />
     <ClInclude Include="include\orMath.h" />
+    <ClInclude Include="include\orPhysics.h" />
     <ClInclude Include="include\orPlatform\atomic.h" />
     <ClInclude Include="include\orPlatform\linux\atomic_linux.h" />
     <ClInclude Include="include\orPlatform\window.h" />
