Move entity system to own class

--- a/OrbitalSpace.vcxproj
+++ b/OrbitalSpace.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\orbitalSpaceApp.cpp" />
     <ClCompile Include="src\orCamera.cpp" />
+    <ClCompile Include="src\orEntity.cpp" />
     <ClCompile Include="src\orPhysics.cpp" />
     <ClCompile Include="src\orPlatform\win32\window_win32.cpp" />
     <ClCompile Include="src\orProfile\perftimer.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="include\geom.h" />
     <ClInclude Include="include\orbitalSpaceApp.h" />
     <ClInclude Include="include\orCamera.h" />
+    <ClInclude Include="include\orEntity.h" />
     <ClInclude Include="include\orGfx.h" />
     <ClInclude Include="include\orMath.h" />
     <ClInclude Include="include\orPhysics.h" />
