Use GLEW to allow compiling despite unsupported OpenGL extensions in Eigen's OpenGLSupport. Linux support isn't ideal right now: I'm using a pre-built version of SFML 2.0 RC, and I don't think there are static versions of the libs available. This means I need to modify the shared lib load path in the environment before launching the built executable so it can find the SFML libraries. What I probably want to do, on both windows and linux, is include the SFML source in the source tree, and require SFML's dependencies to build the OrbitalSpace executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,15 @@ include_directories("/usr/include/eigen3")
 include_directories("/usr/include/eigen3/unsupported")
 include_directories("include")
 
-find_package(OpenGL)
-find_package(Threads)
+find_package(OpenGL REQUIRED)
+find_package(Threads REQUIRED)
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME ON)
 set(Boost_MIN_VERSION "1.46.0")
 find_package(Boost COMPONENTS thread program_options system date_time REQUIRED)
+
+# find_package(SFML REQUIRED)
 
 add_definitions(-DGL_GLEXT_PROTOTYPES)
 add_definitions(-D__STDC_LIMIT_MACROS)
@@ -35,5 +37,5 @@ add_executable(OrbitalSpace
   src/orProfile/perftimer.cpp
   src/timer.cpp
 )
-target_link_libraries(OrbitalSpace GL GLU glut sfml-graphics sfml-audio sfml-window sfml-system)
+target_link_libraries(OrbitalSpace GL GLU GLEW glut sfml-graphics sfml-audio sfml-window sfml-system)
 target_link_libraries(OrbitalSpace ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} )
