WIP on a system for text labels; reproduced the OpenGL projection matrix calculation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 project (OrbitalSpace)
 
 #set(CMAKE_CXX_FLAGS "-g3 -Wall -Wextra -Wno-shadow -Wno-unused-function")
-set(CMAKE_CXX_FLAGS "-g3 -Wall")
+set(CMAKE_CXX_FLAGS "-g3 -Wall -O3")
 set(CMAKE_EXE_LINKER_FLAGS "-L/media/Data2/Coding/SFML-2.0-rc/lib")
 
 include_directories(${Boost_INCLUDE_DIRS})
