Build and link SDL2 alongside

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,12 @@ include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${OpenGL_INCLUDE_DIRS})
 include_directories(${GLUT_INCLUDE_DIRS})
 include_directories(${SFML_INCLUDE_DIRS})
+# TODO what?? Fix plz
 include_directories("/usr/include/eigen3")
 include_directories("/usr/include/eigen3/unsupported")
 include_directories("./include")
+
+add_subdirectory("./SDL")
 
 add_definitions(-DGL_GLEXT_PROTOTYPES)
 add_definitions(-D__STDC_LIMIT_MACROS)
@@ -55,5 +58,6 @@ target_link_libraries(OrbitalSpace ${Boost_LIBRARIES})
 target_link_libraries(OrbitalSpace ${OpenGL_LIBRARIES})
 target_link_libraries(OrbitalSpace GLU)
 target_link_libraries(OrbitalSpace ${GLUT_LIBRARIES})
-target_link_libraries(OrbitalSpace GLEW) # TODO
+target_link_libraries(OrbitalSpace GLEW) # TODO # TODO...what?
 target_link_libraries(OrbitalSpace ${SFML_LIBRARIES})
+target_link_libraries(OrbitalSpace SDL2)
