--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=368,405
 Collapsed=0
 
 [ImGui Demo]
-Pos=470,24
+Pos=469,23
 Size=550,680
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [About ImGui]
 Pos=60,60
 Size=533,86
+Collapsed=0
+
+[Timeline]
+Pos=20,455
+Size=1562,377
 Collapsed=0
 
