--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Debug]
-Pos=66,7
+Pos=92,87
 Size=368,405
 Collapsed=0
 
@@ -26,5 +26,10 @@ Collapsed=0
 [Timeline]
 Pos=10,505
 Size=1562,377
+Collapsed=0
+
+[CamPosMatrix]
+Pos=479,53
+Size=396,149
 Collapsed=0
 
